main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
    vertical-align: baseline;
    font-family: 'Roboto', sans-serif;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* CSS for mobile */

header {
    width: 95%;
    padding-top: 1em;
    padding-left: 1em;
    display: flex;
    justify-content: space-between;
    font-family: "Roboto", sans-serif;
}

a {
    text-decoration: none;
    color: #000;
}

header nav {
    display: flex;
    align-items: baseline;
    padding-right: 1em;
}

.hidden {
    display: none;
}

nav > li {
    list-style: none;
    padding-left: 1em;
}


div {
    margin: 0 auto;
    width: 90%;
     
}

.duchamp {
    margin: 0;
    margin: 0 auto;
    padding:.5em;
    width: 90%;
}

p {
    padding-bottom: .75em;
}

.image-container {
   display: grid; 
}

img {
    width: 100%;
    height: auto;
}

